Fixes some alignment issue with JSX rendering

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -210,17 +210,6 @@ nav a:hover {
 }
 
 /* CARDS */
-.card {
-  margin: 0 15px 20px 0;
-  border-top: 1px solid var(--dark);
-  border-bottom: 3px solid var(--dark);
-  border-right: 1px solid var(--dark);
-  border-left: 1px solid var(--dark);
-  border-radius: var(--border-radius);
-  background-color: var(--light);
-  color: var(--dark);
-}
-
 .cake-card {
   margin: 0 5px 5px 0;
   border-top: 1px solid var(--pink-mature);
@@ -284,27 +273,48 @@ nav a:hover {
   background-color: var(--primary);
 }
 
+.card {
+  margin: 0 15px 20px 0;
+  border-top: 1px solid var(--dark);
+  border-bottom: 3px solid var(--dark);
+  border-right: 1px solid var(--dark);
+  border-left: 1px solid var(--dark);
+  border-radius: var(--border-radius);
+  background-color: var(--light);
+  color: var(--dark);
+}
+
 .card-header {
-  color: var(--secondary);
+  /* color: var(--secondary);
   margin: 5;
   background-color: var(--dark);
   padding: 0.35rem 0.35rem 0.35rem 0.55rem;
   border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
-  font-family: var(--designer-font-primary);
+  font-family: var(--designer-font-primary); */
+  color: var(--secondary);
+  margin: 0;
+  background-color: var(--dark);
+  padding: 0.35rem 0.35rem 0.50rem 0.55rem;
+  /* padding: 0.625rem; */
+  border-radius: calc(0.18rem - 1px) calc(0.18rem - 1px) 0 0;
 }
 
 .card-body {
-  padding: 0.5% 1.0% 0.5% 1.0% ;
+  padding: 1.8% 2.5% 1.5% 2.5% ;
+  /* font-size: 1.3rem; */
+  /* padding: 2.5%; */
   font-size: 1.3rem;
 }
 
 .card-body p {
   padding: 0.5% 1.5% 0.5% 1.5%;
+  /* padding: 2.5%; */
   font-size: 1.4rem !important;
 }
 
 .card-body span {
-  padding: 1.0% 0.5%;
+  /* padding: 1.0% 0.5%; */
+  padding: 1.5% 0;
   font-size: 1.2rem !important;
   font-family: var(--casual-technical-font);
 }
